<resources>
    <string name="app_name">MyTasksFirebase</string>
    <string name="authorization">Authorization</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="registration">Registration</string>
    <string name="submit">Submit</string>
    <string name="start_sign_in">Start sign in</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="some">Some</string>
    <string name="task">Task</string>
</resources>
